--- a/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
+++ b/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
@@ -64,7 +64,7 @@
 
 <p>Čtvrt libry másla a čtvrt libry mouky na vále rukama prohnět, přidej k tomu šest lotů tlučeného cukru, čtyry loty strouhaných mandlí, s půl citronu nakrájenou kůru, štipec soli, a zadělej to dvěma žloutky a šťávou z půl citronu, těsto dobře prohněť a pak ho rozválej na velký, podle talíře nebo mísy do kulata přistřížený papír, kraje papíru kolem do výšky ohni, koláč hojně poklad pěknými, na tenounké lístky nakrájenými jablkami, posyp ho cukrem a čtyřmi loty drobně usekaných mandlí, a nech ho pěkně upect.</p>
 
-<a name="krehky-kolac-a-kremem"><h2>Křehký koláč a krémem</h2></a>
+<a name="krehky-kolac-s-kremem"><h2>Křehký koláč s krémem</h2></a>
 
 <p>Ve dvanácti lotech mouky rozemni na vále osm lotů čerstvého másla, přidej k tomu čtyry loty cukru, krapýtek soli, a zadělej to dvěma žloutky. Potom si přistřihni tři stejně velké, kulaté papíry, podle nich udělej z těsta tři tenké koláče a nech je do bledožluta upect; načež pomaž každý malinovou nebo rybízovou zavařeninkou a polož je na sebe; pak udělej ze čtyr bílků tuhý sníh, vmíchej do něho čtvrt libry s kouskem vanilky na prášek tlučeného cukru, oblož ním koláče vůkol a navrchu nejvíce, postav to na chvilku do vlažné trouby, aby se to opeklo – a je to hotovo. Také se může pouze jeden velký koláč z toho těsta udělat, zavařeninkou pomazat a krémem obložit.</p>
 
