--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -134,7 +134,7 @@
 
 <p>Rozkrájej, čtyry ostrouhané žemličky na tenké lístky, vymaž melounovou formu hodně máslem, vysyp ji strouhanou žemličkovou kůrkou, vylož dno těmi žemličkami, tyto poklaď loupanými, na tenké lístky rozkrájenými míšeňskými jablkami, posyp to hrozinkami bez jadýrek, na nudličky rozkrájenými loupanými mandlemi a drobnince rozkrájenou citronovou kůrou, na to dej opět vrstvu žemliček, poklad je jablkovými lístky, posyp mandlemi, hrozinkami a citronovou kůrou, a tak pokračuj, až jest všecko; nech v žejdlíku dobrého sladkého vína vařit kousek skořice, 6 celých křebíčků a 4 loty cukru, polej tím všude stejně ty žemličky a nech to tři čtvrtě hodiny v páře vařit, pak to dej i s vodou na čtvrt hodiny do horké trouby, aby se to povrchu opeklo; potom to vyklop, posyp cukrem a dej to na tabuli.</p>
 
-<a name="zemlovka-a-hrozinkami"><h2>Žemlovka a hrozinkami</h2></a>
+<a name="zemlovka-s-hrozinkami"><h2>Žemlovka s hrozinkami</h2></a>
 
 <p>Vymaž formu nebo pěkný kleitovaný rendlík máslem a vysyp ho strouhanou žemličkovou kůrkou, rozkrájej žemličky na lístky, poklaď dno vrstvou těch žemliček, posyp je malýma hrozinkama a krájenou pomerančovou kůrou, pak dej zase žemličky, opět je posyp, á tak pokračuj, až je všecko; navrchu to poklad kousky nového másla, rozkloktej v sladké smetaně asi dvě vejce, dej k tomu trochu cukru, krapýtek soli, trochu citronové kůry, dobře to rozkloktej a polej tím ty žemličky; pak to dej do trouby, nech to vysmahnout a povrchu hezky do červena opéct; potom to posyp cukrem a dej to na stůl.</p>
 
@@ -158,7 +158,7 @@
 
 <p>Ustrouhej 4 žemličky, dej je do hrnku, vraz do toho <b><i>8</i></b> vajec, vlej do toho žejdlík smetany, dej k tomu drobně rozkrájené citronové kůry, trochu květu, 3 loty cukru, a všecko v hrnci dobře umíchej; nyní vezmi plech s důlkama, dej do každého důlku trochu rozpuštěného másla, lžičku toho těstíčka, lžičku dobře slazených, hřebíčkem á. citronovou kůrou připravených povidel, na to zase lžičku těstíčka a pokrop to zase máslem; když jsou lívanečky na jedné straně upečeny, obrat je, a pokračuj tak pořád, až všecky upečeš; pak je omoč v rozpuštěném másle, urovnej je na mísu a posyp je skořicí a cukrem. Také se můžou péct nenadívané, a pak skořici a cukrem posypat.</p>
 
-<a name="zemlickove-rizky-a-hovezim-tokem"><h2>Žemličkové řízky a hovězím tokem</h2></a>
+<a name="zemlickove-rizky-s-hovezim-tokem"><h2>Žemličkové řízky s hovězím tokem</h2></a>
 
 <p>Rozkrájej na kostky dvě nebo tři ostrouhané žemličky, a kolik je žemliček, tolik lotů hovězího tuku rozkrájej, a přimíchej k němu tolik lotů přebraných, vymytých a usušených malých hrozinek a též tolik lotů na nudličky rozkrájené pomerančové kůry; potom vymaž novým máslem formu nebo bundový hladký kuthánek, dej do něho vrstvu rozkrájené žemličky, na to vrstvu s hrozinkami a pomerančovou kůrou smíchaného tuku, pak zase žemličku a zase tuk, až je všecko narovnáno; pak se vezme na každou žemličku nejméně půl žejdlika sladké smetany, tedy na 3 žemličky půl druhého žejdlíka, vrazí se do ní jedno celé vejce a dva žloutky, trochu se to osolí, dají se do toho dva loty tlučeného cukru, dobře se to rozkloktá a poleje se tím ta míchaninka v kuthánku, navrch se poklade novým máslem, posype tlučeným cukrem a dá se to do trouby upéct. Když je to napolo upečeno, posype se to hrubé tlučeným cukrem, a pak se to nechá jak povrchu tak vespod hezky do červena upéct. Když to máš nésti na stůl, posyp to ještě cukrem.</p>
 
