--- a/src/napoje.html
+++ b/src/napoje.html
@@ -16,7 +16,7 @@
 
 <p>Dej do čistého hrnku lot holandského čaje, nalej na něj žejdlík vařící vody, přikrej ho a nech ho na teplém místě stát, nesmí se však vařit. Ostrouhej na pěti čtvrtích libry cukru kůru s jednoho citronu a s jednoho pomeranče, pak dej cukr na čistý kastrol, proceď na něj čaj, který musí míti krásně žlutou barvu, a nech ho zvařit, až se táhne, načež přidej k němu ze šesti citronů a z jednoho pomeranče procezenou šťávu a žejdlík dobrého rumu. Nyní tuto massu buď uschovej v dobře zandaných láhvích, anebo, pije-li se punš hned, spař půl lotu čaje v několika žejdlíkách vařící vody, mnoho-li právě potřebuješ, pak ho proceď a přilévej místo vody k punši. Obyčejně se dává jeden díl massy a dva díly vody.</p>
 
-<a name="punc-a-vejcemi"><h2>Punč a vejcemi</h2></a>
+<a name="punc-s-vejcemi"><h2>Punč s vejcemi</h2></a>
 
 <p>Na dvanáct sklenic punše vraz do velkého hladkého hrnku osm celých vajec a kloktej je kloktačkou nebo drátovou metlou, až jsou docela zpěněné, pak vlej na ně podle některého z předešlých předpisů upravenou massu, odměř k tomu tolik vody, mnoho-li na dvanáct skleniček je potřebí, postav to na oheň a kloktej tím stále, až se to začne zvedat, pak nalévej punš do skleniček. Jest velmi dobrý.</p>
 
