--- a/src/pecene.html
+++ b/src/pecene.html
@@ -74,7 +74,7 @@
 
 <p>Utři na misce čtyry loty másla, vraz do něho tři celé vejce, dej k tomu čtyry ustrouhané žemličky, přilej čtvrt žejdlíka smetany, dobře to umíchej, osol to a okořeň trochu tlučeným květem, načež tím naděj vnitřek dobře očištěné a nasolené husy nebo kachny, zašpejluj ji a nech ji pect. Tato nádivka stačí do jedné husy nebo do dvou kachen.</p>
 
-<a name="topan-a-nadivkou"><h2>Ťopan a nádívkou</h2></a>
+<a name="topan-s-nadivkou"><h2>Ťopan s nádívkou</h2></a>
 
 <p>Když jest ťopan čistě obrán a má se kuchati, musí se dát zvláštní pozor na vole, aby se neprotrhlo; pak se dělá nádivka, totiž utře se kus čerstvého másla, vrazí se do něho několik vajec, přidá se strouhaná žemlička, několik lžiček sladké smetany, něco krájených nebo tlučených mandli, trochu květu, a cukru tolik, aby nádivka byla sice dost, avšak ne příliš sladká; načež se vole nádivkou naděje, a ťopan se nechá poznenáhla pect, přičemž se však jako ostatní pečeně musí máslem mastit. Jsou-li ale k dostáni kaštany, tedy jest lépe, když se nechaji kaštany trochu upražit, aby se s nich kůra mohla lehce sloupnout, pak se vole vymaže novým máslem a místo nádivky náplni se těmi kaštany. Když jest ťopan upečen, tedy se vole nejdříve rozkrájí a s těmi kaštany hostům podává.</p>
 
