--- a/src/rozlicne-ryby.html
+++ b/src/rozlicne-ryby.html
@@ -106,7 +106,7 @@
 
 <p>Tímto aspikem se mohou okrášlet všecky studené ryby, a také se ho může použit ke všem rybím rosolům. Namoč totiž jakoukoli formu ve studené vodě, nalej do ní na prst tlustě toho aspiku a nech ho dobře ustydnout; nyní dělej malé tříhranníčky z citronu na tenké lístky rozkrájeného, a z těchto tříhranníčků a pak z citrónových nebo bobkových, drobně nakrájených lístků udělej kolem toho ustydlého rosolu pěkný věnec, a na to můžeš dáti na modro vařené a studené kousky štiky nebo kapra; kdo by měl mnoho na modro vařených hlav od kaprů, mohl by to vyložit kaprovými jazejčkami a očkami, pak navrch opět nalejt rosolu a nechat to u ledu stydnout. Když to chceš vyklopit namoč formu spěšně ve vařící vodě a rosol čerstvě vyklop, pak ho zase postav k ledu, aby hodně ztuhnul. – Mimo kapra a štiky může se do toho rosolu dát též ouhoř, mník, sumec, losos atd.</p>
 
-<a name="studena-stika-a-aspikem"><h2>Studená štika a aspikem</h2></a>
+<a name="studena-stika-s-aspikem"><h2>Studená štika s aspikem</h2></a>
 
 <p>Uvař štiku jak obyčejně na modro a nech ji trochu prochladnout, pak s ni stáhni kůži, kůstky vyber, bílé masíčko rozlož pěkně na lístky a urovnej je na mísu; pak omej v teplé vodě trochu dymiánu a několik bobkových lístků, aby na nich prach nezůstal, a utluč to v moždíři s několika na tvrdo uvařenými žloutkami; zatím nech uvařit žemličku na hustou kasičku v té polívce, v které se štika vařila, dej ji do moždíře k tomu ostatnímu, nalej na to trochu octa a trochu té polívky, dobře to rozmíchej, pak to proceď, přilej ještě trochu octa a oleje, polej tím to urovnané masíčko ze štiky, a okolo udělej věnec z <a href="#postni-aspik">postního rosolu</a>.</p>
 
@@ -246,7 +246,7 @@
 
 <p>Když jest vyzina čerstvá, omeje a nasolí se; dostane-li se však nasolená, tedy se musí namočit a teprva za několik hodin omejt, pak se vloží na rendlík do rozpuštěného másla, pomaže se též povrchu hodně máslem, posype se strouhanou žemličkou a nechá se v troubě upéct, potom se dá na mísu, poleje se rozpáleným máslem, do kterého se nacedila citronová šťáva, a dá se na stůl.</p>
 
-<a name="vyzina-a-muslemi"><h2>Vyzina a mušlemi</h2></a>
+<a name="vyzina-s-muslemi"><h2>Vyzina s mušlemi</h2></a>
 
 <p>Vyper a nasol pěkný kus vyziny, není-li již solená, dej ji do hlubokého kastrolu, přidej k ní jeden na koláčky nakrájený citron, z něhož však jádra musíš odstranit, aby to nebylo hořké, dej k tomu dva bobkové listy, jednu velkou cibuli, trochu celého pepře, nového kořeni a kousek zázvoru, přilej k tomu sklenku bílého vína, polej to rozpuštěným máslem, přikrej to dobře přiléhající poklicí a nech to půl hodiny dusit. Mušle oškrab nožem, omej je v několika vodách, vlož je do rendlíku na cibuli na tenké koláčky rozkrájenou, přidej k nim hodný kus másla, nalej na ně sklenku bílého vína, a nech je přikryté jen tak dlouho dusit, až se začnou rozvírat, pak je vyndej, každou nožem pozorně rozloupni, aby celá mušle zůstala na jedné skořápce, a dej je na jiný kastrolek; omáčku od mušlí jakož, i onu z vyziny slej dohromady, přidej k tomu jednu ostrouhanou, ve smetaně namočenou žemličku a nech to zvařit; potom dej vyzinu na mísu, mušle urovnej kolem a polej to omáčkou.</p>
 
@@ -270,7 +270,7 @@
 
 <p>Stáhni kůži se třech mléčních slanečků, vlož je do mléka a nech je v něm přes noc ležet; druhý den je čistě omej, mléčí vyndej do hrnečku, slanečky rozpůlí, kůstky vyndej, slanečky nakrájej na kousky a vlož je do hluboké nádobky; nyní mléči hodně rozetři se dvěmi lžícemi brabancového oleje, a přidávej k tomu po lžících vinního octa, až máš dostatečně omáčky k pokrytí slanečků, načež to ještě hodně kloktej, až to zhoustne; potom usekej drobounce jednu velkou cibuli, posyp ní slanečky, nalej na to omáčku a uschovej to k další potřebě. V čas nouze poskytne to dobrou večeři.</p>
 
-<a name="treska-omastena-a-krenem"><h2>Treska omaštěná a křenem</h2></a>
+<a name="treska-omastena-s-krenem"><h2>Treska omaštěná s křenem</h2></a>
 
 <p>Dobře močenou tresku přemej ve studené vodě, rozkrájej ji na čtyrhrané kousky, urovnej ji do hrnku, osol ji, nalej na ni vřelé vody a nech ji vařit, až je dost měkká; pak ji oceď, kůžičku s ní oloupej, narovnej ji na mísu, posyp ostrouhanou žemličkovou kůrkou, omasti smaženou cibulkou, a dej k ní na stůl buď smetanový křen nebo hořčici.</p>
 
@@ -290,7 +290,7 @@
 
 <p>Uvařenou tresku rozeber pěkně na lístky, vymaž formu máslem, na dno polož papír, tento zase pomaž máslem a posyp strouhanou žemličkovou kůrkou, pak dej vrstvu troškových lístků, na to vrstvu smažené strouhané žemličky, drobně usekaných sardelí, citronové kůry a květu, potom zase vrstvu freskových lístků, opět žemličkovou kůrku a to ostatní, a tak pokračuj, až je forma plná; načež to polej trochu smetanou a nech to v troubě opect; pak to vyklop, sejmi papír a dej to na stůl. Také se to může dáti na stůl i s formou, a tu netřeba dávati do ní papír.</p>
 
-<a name="treska-a-horcicovou-omackou"><h2>Treska a horčicovou omáčkou</h2></a>
+<a name="treska-s-horcicovou-omackou"><h2>Treska s horčicovou omáčkou</h2></a>
 
 <p>Ovař tresku ve slané vodě a opatrně ji vyndej; dej na kastrol máslo, drobně rozkrájenou cibuli, trochu strouhané žemličky, a nech to do zlatova usmažit, pak na to vlej hořčice tolik, mnoho-li chceš míti omáčky, a nech to ještě přejít asi dva vary, potom to vlej na tresku a dej ji na stůl.</p>
 
