--- a/src/salaty.html
+++ b/src/salaty.html
@@ -20,7 +20,7 @@
 
 <p>Oloupej pěkné okurky a nech je chvíli ve studené vodě, pak je na kružadle na tenké lístky ukrouhej, dej je na misku, polej je dobrým vinním octem a dobrým brabancovým olejem, osol je, promíchej vidličkami a posyp je tlučeným pepřem.</p>
 
-<a name="okurkovy-salat-a-kyselou-smetanou"><h2>Okurkový salát a kyselou smetanou</h2></a>
+<a name="okurkovy-salat-s-kyselou-smetanou"><h2>Okurkový salát s kyselou smetanou</h2></a>
 
 <p>Upraví se na týž způsob jako předešle, jen že se místo octa a oleje poleje hustou kyselou smetanou a posype se pepřem.</p>
 
