--- a/src/zadelavana-a-dusena-jidla.html
+++ b/src/zadelavana-a-dusena-jidla.html
@@ -94,7 +94,7 @@
 
 <p>Ze studené telecí pečeně nakrájejí se opět malé řízky jako velké nudle a dají se na kuthánek; na jiný kuthánek se dá kousek másla, do toho se dají rozkrájené čerstvé smrže, osolí se, dá se k nim drobně rozkrájená petružel, a nechají se dusit, až vysmahnou; pak se trošinku zaprášejí moukou, nechají se chvilku zapěnit, potom se na ně naleje trochu hovězí polívky a dají se k těm telecím řízkům. Jsou-li raci, mohou se k tomu dát račí ocásky, nebo několik fašových knedlíčků, brzlíčků, pupíčků od kuřat atd., a okolo se udělá věnec ze smažené, na půlměsíčky rozkrájené žemličky. Je to také chutné jídlo.</p>
 
-<a name="teleci-rizky-a-vinem"><h2>Telecí řízky a vínem</h2></a>
+<a name="teleci-rizky-s-vinem"><h2>Telecí řízky s vínem</h2></a>
 
 <p>Nakrájej na prst tlusté řízky buď ze syrového telecího plécka nebo ze syrové kejty, sklepej je hodně hřbetem velkého nože a malinko je osol. Rozkrájej na malé kostky kousek slaniny, dej ji na kuthánek, vlož na ni ty řízky, dej k nim asi půl malinké drobnince usekané cibulky, a nech je dusit, až po obou stranách zčervenají. Nech v hrnečku rozpustit kousek másla (ku př. na libru řízků lot másla), vmíchej do něho kávovou lžičku pěkné mouky, vlej do toho čtvrtku vína, čtvrtku polívky, dej k tomu trochu drobně rozkrájené citronové kůry, trochu květu, dobře to rozkloktej, vlej to na ty do červena opečené řízky a nech je povařit. Chceš-li, můžeš je trochu zacedit citronovou šťávou, nebo také jenom tak nechat, oboje jest dobré.</p>
 
