--- a/src/zadelavana-zverina.html
+++ b/src/zadelavana-zverina.html
@@ -12,7 +12,7 @@
 
 <p>Když jest zvěřina ze srnce dobře naložena a dost uležena, tedy ji vymej, dej ji do hrnce, nalej na ni tři díly vody, jeden díl vinního octa, dej k tomu bobkové listí, dymián, cibuli, několik jalovců, celý pepř, zázvor, nové koření, a nech ji více než na polo uvařit, pak ji rozkrájej a nech ji na rendlíku na másle trochu udusit; potom zapraž červenou jíškou žejdlík polívky, v které se zvěřina vařila, zalej ji hustou kyselou smetanou, proceď ji na zvěřinu, a dej k tomu citronové kůry a kaprle; chceš-li však míti omáčku načernalou, tedy místo smetaný upraž do tmavá kus cukru a dej ho do ni. K tomu se také můžou dát okolo mísy citronové koláčky, nebo se může udělat věnec z máslového těsta.</p>
 
-<a name="zverina-a-jalovcovou-omackou"><h2>Zvěřina a jalovcovou omáčkou</h2></a>
+<a name="zverina-s-jalovcovou-omackou"><h2>Zvěřina s jalovcovou omáčkou</h2></a>
 
 <p>Uvař dvě libry dobře vyprané zvěřiny ve slané vodě do měkka s připojenou zeleninou, jaká se dává k hovězímu masu; nech na rendlíku rozpustit kus čerstvého loje nebo másla, dej do něho dvě kávové lžičky tlučeného cukru a nech to zčervenat, pak do toho vmíchej dvě plné lžíce mouky, a když je jíška hodně hnědá; nalej na ni znenáhla asi půl žejdlíka polívky ze zvěřiny, trochu octa a sklenici červeného vina, přidej k tomu hrst protlučeného jalovce a nech to hodně povařit; pak maso rozkrájej na kousky, urovnej ho na mísu a omáčku naň skrze cedník proceď</p>
 
@@ -24,7 +24,7 @@
 
 <p>Koroptve dobře očisti, trochu je osol a vlož na rendlík, dej k nim kousek slaniny, dymián, bobkové listí, cibuli, hřebíček, zázvor a pepř, též kousek másla, jakož i kus telecího masa, žaloudečky a jatýrka od koroptvi, a nech to všecko do tmavá dusit, pak na to nalej jako na kachnu tři díly polívky, jeden díl octa, a nech to povařit; potom telecí maso, jatýrka a žaloudečky vyndej a vše drobnince usekej se zelenou petruželkou, kaprlemi a citronovou kůrou; nyní dej koroptvičky na jiný rendlík, omáčku připraž červenou jištičkou a proceď ji na koroptve, dej k tomu tu sekaninu a nech to ještě povařit; pak udělej okolo pěkný věnec z máslového těsta a dej to na stůl. Také se může k tomu přidati kousek brunátně upraženého a kousek bílého cukru.</p>
 
-<a name="koroptve-a-pomerancovou-omackou"><h2>Koroptve a pomerančovou omáčkou</h2></a>
+<a name="koroptve-s-pomerancovou-omackou"><h2>Koroptve s pomerančovou omáčkou</h2></a>
 
 <p>Dej na rendlík kus másla, jednu na koláčky nakrájenou cibuli, dva bobkové listy, vlož na to dobře očištěné a patřičně osolené koroptve, přikrej je poklici a nech je dusit. Na jiný kastrolek dej kousek slaniny, kousek másla, kousek hovězího masa, žaloudky a jatýrka od koroptví, jednu velkou cibuli, jeden petruželový kořen i s natí, vše na drobno pokrájeno, a nech to do hnědá dusit, pak na to nalej sběračku hovězí polívky, trochu vína, naceď do toho šťávu z jednoho citronu, a nech to ještě hodně pospolu vařit; zatím udělej hnědou jíšku, přidej k ní dvě drobně usekané šalotky, zapraž ni tu zvařeninu a proceď to skrze hustý cedník; pak vyválej kousek čerstvého másla v mouce, přidej ho do té omáčky, rozkverluj ho a omáčku nech ještě povařit; posléz do ni naceď šťávu z jednoho pomeranče a dej do ni též trochu drobně nakrájené pomerančové kůry; nyní vlož do omáčky koroptve na čtvrtky rozkrájené, a šťávu, v níž koroptve se dusily, můžeš také připojit, a nech vše ještě trochu povařit; potom koroptve ouhledně na mísu urovnej a polej je omáčkou.</p>
 
@@ -72,7 +72,7 @@
 
 <p>Ober čistě 24 drozdů nebo kvíčal, střívka vytahej, ptáky přemej a hezky zašpejluj. Rozkrájej na nudličky několik malých nebo jednu velkou cibuli, vymaž kuthan hodně máslem, posyp dno těmi cibulovými nudličkami, na ně narovnej ty ptáky, trochu je osol a nech je tak dlouho péct, až cibulka hezky zčervená; pak vezmi ptáky ven, urovnej je na jiný kuthan, jednoho nebo dva ptáky v moždíři dobře utluč, dej je k té hnědé cibuli si nech to chvilenku dusit, potom na to nalej půl žejdlíka rakouského vína a tři čtvrtky hovězí polívky, přidej k tomu půl strouhané, do zlatova usmažené žemličky, a nech to trochu povařit; pak to proceď na ptáky, nech to ještě chvilku vařit, a přidej citronové kůry; načež ptáky pěkně urovnej na mísu, polej je tou omáčkou a okolo udělej věnec buď z máslového* těsta nebo z nakrájené usmažené žemličky.</p>
 
-<a name="krepelky-a-rejzi"><h2>Křepelky a rejží</h2></a>
+<a name="krepelky-s-rejzi"><h2>Křepelky s rejží</h2></a>
 
 <p>Očisti dobře a osol dvě křepelky, a nech je na másle upéct, přičemž je častěji vlastní šťávou polévej. Přeber, vyper a spař čtvrt libry rejže, dej ji na rendlík s kusem másla, vlož do ní jednu hřebíčkem prostrkanou cibuli, přikrej poklicí a nech ji na polovic udusit, potom do ní dej ty křepelky i s procezenou šťávou, přilej k tomu ještě trochu rozpuštěného <a href="polivky-masite.html#rosol-polivkovy">polívkového rosolu</a>, a nemáš-li ho, tedy silné hovězí polívky, a nech to pospolu dusit, až to dostatečně zmlkne.</p>
 
