--- a/src/zeleniny.html
+++ b/src/zeleniny.html
@@ -36,7 +36,7 @@
 
 <p>Pro 6 osob očisti pěkné ode všech lístků 6 růží karfiolu, pak dej aspoň dva loty nového másla do slané vařící vody, vlož do ni karfiol a nech ho vařit; když je dost měkký, ne však rozvařený, vylož ho pěkně na mísu, polej rozpáleným novým máslem, udělej okolo věnec se strouhané, do zlatova usmažené žemličky a nes ho na stůl. Na malou mističku nastrouhej parmazánského sýra a podej ho zároveň s karfiolem, aby si každý dle libosti posloužil. Takto připravený karfiol může se požívat v den postní, a voda, ve které se vařil, může se v masitý den přilejt k masité, v den postní pak může se užitečně použit k postní polívce.</p>
 
-<a name="karfiol-a-kuratkami"><h2>Karfiol a kuřátkami</h2></a>
+<a name="karfiol-s-kuratkami"><h2>Karfiol s kuřátkami</h2></a>
 
 <p>Okrájej a připrav pěkně karfiol, a nech jej v hovězí polívce povařit; kuřátka pěkně očisti, zašpejluj, dej je na rendlík na kousek másla dusit (můžeš k nim také dát půl bílé cibule a kousky karfiolu) a podlévej je tou polívkou, v nížto se karfiol vařil, až jsou měkké; potom je dej na jiný čistý rendlík, do šťávy, v které se dusily nalej tu ostatní polívku z karfiolu, zapraž to bílou jištičkou, proceď to na kuřátka a okořeň trochu květem. Potom urovnej kuřátka do prostřed mísy, karfiol pěkně okolo, a chceš-li to míti ještě krásnější, tedy omoč polovic karfiolu ve vejci a ve strouhané žemličce, a vysmaž ho, pak dej vždy jednu růžičku smaženého a jednu růžičku vařeného karfiolu, tak je to ouhledné.</p>
 
