--- a/src/zmrzliny.html
+++ b/src/zmrzliny.html
@@ -78,7 +78,7 @@
 
 <p>Ostrouhej na cukru kůru s jednoho pomeranče a se dvou citronů, dej to do čisté nádobky a nalej na to koflíček vody, aby se to rozmočilo, potom do toho naceď šťávu ze šesti citronů a z toho pomeranče, dobře to promíchej, nech zvařit 12 lotů cukru jako při předešlých zmrzlinách, až se táhne, pak to smíchej dohromady, proceď to skrze servít do pyksly, a když to dáš k ledu, vlej do toho znenáhla mezi ustavičným mícháním koflíček dobrého rumu, a míchej tím tak dlouho, až to veskrz zmrzne.</p>
 
-<a name="zmrzlina-a-maraskynem"><h2>Zmrzlina a maraskýnem</h2></a>
+<a name="zmrzlina-s-maraskynem"><h2>Zmrzlina s maraskýnem</h2></a>
 
 <p>Umíchej v hrnku 10 žloutků s půl librou tlučeného cukru, nalej na to dva žejdlíky smetany a dobře to rozkloktej, potom to postav na oheň a kloktej tím stále, až se to začne zvedat a houstnout, pak to odstav a míchej tím, až to vychladne; načež k tomu přimíchej tolik maraskýnového likéru, jak to dle vlastní chuti silné nebo lahodné míti chceš, ještě to hodně promíchej, až to docela vystydne, pak to vlej do pyksly a dělej zmrzlinu. – Místo maraskýnu můžeš dáti jakýkoli jiný likér, pak se zmrzlina dle toho nazývá. Toto uvádí se pro uspoření stálého opakování.</p>
 
