--- a/src/vejce.html
+++ b/src/vejce.html
@@ -56,11 +56,11 @@
 
 <p>Uvař 8 vajec na tvrdo, ze třech vyndej žloutky, bílky a ostatních 5 vajec rozkrájej na kostky; pak utři asi 3 loty nového másla, vraz do něho 4 syrové žloutky, osol to, dej k tomu asi kávovou lžičku mouky, asi malý žejdlik hezky husté kyselé smetany, v nížto jsi byla rozmíchala dvě lžíce dobrého vinního octa, dobře vše promíchej a posléz do toho zvolna zamíchej ty na kostky rozkrájené vejce; nyní vymaž kuthánek nebo mísu novým máslem, vlej to do ní, ty 3 žloutky drobnince rozkrájej a prosej je skrze cedník nebo řídké drátěné sejtko na vejce, pokrop to máslem a nech to v&nbsp;troubě upect. Kdo je milovník pepře, může ním vejce trochu posypat; nebo se také může pepř zvlášť na stůl dát, aby si každý dle libosti posloužil.</p>
 
-<a name="vejce-a-okurkami"><h2>Vejce a okurkami</h2></a>
+<a name="vejce-s-okurkami"><h2>Vejce s okurkami</h2></a>
 
 <p>Udělej asi z osmi pěkných sardelí máslo, hled ale, aby máslo bylo čerstvé; pak uvař na tvrdo asi 3 vejce, a usekej bílky zvlášť a žloutky také zvlášť; potom roztluč asi 10 vajec a udělej je jako obyčejné <a href="#michane-vejce">míchané vejce</a>, nesmějí ale ztvrdnout; když jsou hotové, dej je na teplý talíř, posyp je těmi rozkrájenými bílky, ze sardelového másla udělej do věnečka pěkné hromádky a posyp je těmi sekanými žloutky. Okurky na půlky rozkrájené urovnej do věnečka okolo talíře.</p>
 
-<a name="smazene-vejce-a-horcici"><h2>Smažené vejce a hořčici</h2></a>
+<a name="smazene-vejce-s-horcici"><h2>Smažené vejce s hořčici</h2></a>
 
 <p>Nech na malém kastrolku rozpálit kousek másla, vraz do něho jedno vejce, a hned ho plechovou lžicí dohromady shrň a urovnej, aby zůstalo hezky kulaté, a nech ho zprudka smažit, aby neztvrdlo; když je žloutek již bílkem potažen, tedy vejce vyndej na misku na teplém místě postavenou, do másla vraz hned zase jiné vejce, a tak pokračuj, až jich máš tolik, kolik jich potřebuješ, á každé povrchu malinko osol. Omáčku dělej takto: Usmaž na másle půl drobounce skrájené cibule do zlatová, přidej k ní čtyry lžíce hořčice, lžíci estragonového nebo vinního octa, malý kousek cukru, a nech to zvařit. Když to chceš dáti na stůl, tedy vejce na misce urovnej a podlej je omáčkou.</p>
 
