--- a/src/rozlicne-ryby.html
+++ b/src/rozlicne-ryby.html
@@ -58,7 +58,7 @@
 
 <a name="stika-s-kyselou-smetanou"><h2>Štika s kyselou smetanou</h2></a>
 
-<p>Uvař <a href="#kapr-na-modro">štiku na modro</a>, </b>dej do hrnečku lžíci pěkné mouky, kousek másla a půl žejdlíka husté kyselé smetany, dobře to rozmíchej, přidej k tomu trochu květu, trochu zázvoru a asi půl žejdlíka polívky, v níž se štika vařila, dobře to rozmíchej a nech povařit, pak to proceď na štiku, dej k tomu asi ze třech sardelí sardelového másla a trochu kaprlí, pěkně to na mísu urovnej a dej to na tabuli.</p>
+<p>Uvař <a href="#kapr-na-modro">štiku na modro</a>, dej do hrnečku lžíci pěkné mouky, kousek másla a půl žejdlíka husté kyselé smetany, dobře to rozmíchej, přidej k tomu trochu květu, trochu zázvoru a asi půl žejdlíka polívky, v níž se štika vařila, dobře to rozmíchej a nech povařit, pak to proceď na štiku, dej k tomu asi ze třech sardelí sardelového másla a trochu kaprlí, pěkně to na mísu urovnej a dej to na tabuli.</p>
 
 <a name="pecena-stika-s-omackou"><h2>Pečená štika s omáčkou</h2></a>
 
