--- a/src/uvod.html
+++ b/src/uvod.html
@@ -4,7 +4,7 @@
 
 <p>Čistota, pořádek a dobré vyhovění každé i maličké věci v kuchyni jest základ celého umění kuchařského; pročež přáli jest, aby si nastávající kuchařky následujícího poučení bedlivě všimly.</p>
 
-<p>Předně musí se k tomu hledět, aby <b><i>všecko kuchyňské nádobí,</i></b> v němžto jídla se vaří, bylo úplně čisté, všecky hrnky a rendlíky nechať se chovají čistě umyty a poklopeny v přiměřených příhradách, a když některého upotřebeno býti má, musí se ještě čistým šatem náležitě vytříti.</p>
+<p>Předně musí se k tomu hledět, aby všecko kuchyňské nádobí, v němžto jídla se vaří, bylo úplně čisté, všecky hrnky a rendlíky nechať se chovají čistě umyty a poklopeny v přiměřených příhradách, a když některého upotřebeno býti má, musí se ještě čistým šatem náležitě vytříti.</p>
 
 <p>Železné nádobí, jehož se v novějším čase zhusta užívá, nemá se, když je prázdné, nechávati stát na horkém místě, protože v takovémto případu vnitřní bílý nátěr snadno odpryskuje; stane-li se to však přece, tedy se nesmí v takovéto odprýskané nádobě nic kyselého vařit, protože by tím způsobená plíseň mohla býti zdraví škodlivá.</p>
 
@@ -22,9 +22,9 @@
 
 <p>Je-li masa větší zásoba, musí se k tomu hledět, aby nezapáchlo; stane-li se to však přece, tedy se takové maso nikdy nesmí vařit. Nejlépe se ho ještě použije, když se na rendlíku s kusem másla, s cibulí, kořením a octem udusí a jíškou zapraží.</p>
 
-<p>Také jest dobře v každé větší domácnosti míti v zásobě <a href="omacky-k-hovezimu-masu.html#kysely-rosol-aspik">kyselý rosol</a>. Když se chce spěšně kyselá omáčka připravit, naleje se na jistou část onoho rosolu trochu hovězí polívky, přidá se octa nebo vína, zapraží se to buď jíškou, nebo se to zakloktá žloutkama, přidá se trochu strouhané žemličky, aby to zhoustlo, a omáčka jest hotova.</p>
+<p>Také jest dobře v každé větší domácnosti míti v zásobě <a href="omacky-k-hovezimu-masu.html#kysely-rosol">kyselý rosol</a>. Když se chce spěšně kyselá omáčka připravit, naleje se na jistou část onoho rosolu trochu hovězí polívky, přidá se octa nebo vína, zapraží se to buď jíškou, nebo se to zakloktá žloutkama, přidá se trochu strouhané žemličky, aby to zhoustlo, a omáčka jest hotova.</p>
 
-<p>Všecka domácí <b><i>drůbež,</i></b> aby se stala křehčí, má v létě aspoň přes noc zabita ležet, v zimě déle; zvláště kapouni, husy, topani vydržejí ve studeném místě, kde však příliš nemrzne, 6 i 8 <b><i>dní,</i></b> aniž by škodu utrpěli. Nejlepší jest drůbež škubaná; paří-lise však, musí se dáti pozor, aby se nepřepařil. Proto je dobře, když se kuřata, kapouni a t. d., hned jak se zabijou, strčí do studené vody; tím zbělí a zkřehnou, a tak snadno se nepřepaří. Když jsou dobře očištěni, vykuchají, omejou a připraví se na pekáč, totiž: křidélka se naloží nazad, nožky se do polou uřežou a špagátem ouhledně stáhnou anebo dřevěnými špejlky zašpejlí; nesmí se však na špejlky vzíti dříví borové nebo smolné, aby to nedostalo nepříjemnou chuť. Holubům se hlava uřeže nebo zrovna utrhne; někdo je i zadušuje, aby z nich krev ne vytekla; pak se oškubou a vykuchají.</p>
+<p>Všecka domácí <b><i>drůbež,</i></b> aby se stala křehčí, má v létě aspoň přes noc zabita ležet, v zimě déle; zvláště kapouni, husy, topani vydržejí ve studeném místě, kde však příliš nemrzne, 6 i 8 dní, aniž by škodu utrpěli. Nejlepší jest drůbež škubaná; paří-lise však, musí se dáti pozor, aby se nepřepařil. Proto je dobře, když se kuřata, kapouni a t. d., hned jak se zabijou, strčí do studené vody; tím zbělí a zkřehnou, a tak snadno se nepřepaří. Když jsou dobře očištěni, vykuchají, omejou a připraví se na pekáč, totiž: křidélka se naloží nazad, nožky se do polou uřežou a špagátem ouhledně stáhnou anebo dřevěnými špejlky zašpejlí; nesmí se však na špejlky vzíti dříví borové nebo smolné, aby to nedostalo nepříjemnou chuť. Holubům se hlava uřeže nebo zrovna utrhne; někdo je i zadušuje, aby z nich krev ne vytekla; pak se oškubou a vykuchají.</p>
 
 <p>Bažanti, koroptve, tetřevi, divoké kachny a jiná <b><i>divoká drůbež</i></b> musí též několik dní ve studenu viset, aby zamřela, pak se oškube, jen hlava ne, a chloupky se opálí; nohy se však nesmějí uřezat, sice by to bylo neouhledné.</p>
 
